<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otpverify"
    android:orientation="vertical">
<LinearLayout
    android:id="@+id/layout_otp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:layout_width="75dp"
        android:layout_height="60dp"
        app:siRadius="6dp"
        android:src="@mipmap/ic_launcher"
        app:siBorderWidth="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="100dp"

        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/msg_sit_back"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/msg_manual_otp"
        android:textColor="@color/white"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/inputOtp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:hint="@string/lbl_enter_otp"
        android:inputType="number"
        android:maxLength="6"
        android:padding="10dp"
        android:textCursorDrawable="@null"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btn_verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/regbutton"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/lbl_submit"
        android:textColor="@color/colorPrimary"
        android:textSize="14dp" />

</LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_edit_mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_edit_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />


        <ImageButton
            android:id="@+id/btn_edit_mobile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:src="@drawable/draft" />

    </LinearLayout>

</RelativeLayout>